--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,11 +1,17 @@
-{{ define "header" }}<!-- No header on 404 pages -->{{ end }}
-{{ define "main" }}
-  <div role="main" class="container main-content">
-    <div class="text-center">
-      <h1>{{ i18n "pageNotFound" }}</h1>
-      <br/>
-      <img src="{{ .Site.BaseURL }}/img/404-guilty-dog.png" />
-    </div>
-  </div>
-{{ end }}
+{{- define "title" }}
+{{- T "pageNotFound" | printf "404 %v" }} - {{ .Site.Title -}}
+{{- end -}}
 
+{{- define "content" -}}
+<div class="page" id="content-404">
+    <h1 id="error-emoji"></h1>
+    <p class="error-text">
+    <div><img src="/img/404-guilty-dog.png" />
+    </div>
+    <a href="javascript:void(0);" title="{{ T `back` }}" onclick="window.history.back();">
+        We could not find the page you were looking for. This dog probably took it.
+        <i class="far fa-hand-point-left fa-fw"></i>
+    </a>
+    </p>
+</div>
+{{- end -}}
